--- a/review.html
+++ b/review.html
@@ -112,54 +112,6 @@
                         </label>
                     </div>
                 </div>
-                <h3>Which Solicitor handled your matter? <span>Which Solicitor handled your matter? (Optional)</span>
-                </h3>
-                <div class="solicitor_one clearfix">
-                    <div class="rounded-circle">
-                        <img src="./assets/review/img/guy.png" alt="">
-                    </div>
-                    <div class="custom_select">
-                        <input type="checkbox" id="drop" class="d-none">
-                        <label for="drop">
-                            <span class="value">Bob Jones</span>
-                            <span class="arrow"></span>
-                            <label class="dropdown">
-                                <h4 onclick="event.target.parentElement.parentElement.firstElementChild.innerHTML=event.target.innerHTML">
-                                    1</h4>
-                                <h4 onclick="event.target.parentElement.parentElement.firstElementChild.innerHTML=event.target.innerHTML">
-                                    2</h4>
-                                <h4 onclick="event.target.parentElement.parentElement.firstElementChild.innerHTML=event.target.innerHTML">
-                                    3</h4>
-                                <h4 onclick="event.target.parentElement.parentElement.firstElementChild.innerHTML=event.target.innerHTML">
-                                    4</h4>
-                                <h4 onclick="event.target.parentElement.parentElement.firstElementChild.innerHTML=event.target.innerHTML">
-                                    5</h4>
-                                <h4 onclick="event.target.parentElement.parentElement.firstElementChild.innerHTML=event.target.innerHTML">
-                                    6</h4>
-                                <h4 onclick="event.target.parentElement.parentElement.firstElementChild.innerHTML=event.target.innerHTML">
-                                    7</h4>
-                            </label>
-                        </label>
-                    </div>
-                    <h4><a href="">Click here </a>is another solicitor assitsyou in the matter?</h4>
-                </div>
-                <h3>Were you satisfied with the outcome of your case?</h3>
-                <div class="radios">
-                    <label>
-                        <input type="radio" value="yes" id="satisfied1" name="satisfied"> Yes
-                    </label>
-                    <label>
-                        <input type="radio" value="no" id="satisfied2" name="satisfied"> No
-                    </label>
-                </div>
-                <h3>Would you recommend this firm to somebody else?</h3>
-                <div class="radios">
-                    <label>
-                        <input type="radio" value="yes" id="recommend1" name="recommend"> Yes
-                    </label><label>
-                    <input type="radio" value="no" id="recommend2" name="recommend"> No
-                </label>
-                </div>
                 <div class="row service">
                     <div class="col-sm-5 "><h3>Type of service</h3></div>
                     <div class="custom_select col-md-7">
@@ -212,6 +164,55 @@
                         </label>
                     </div>
                 </div>
+                <h3>Which Solicitor handled your matter? <span>Which Solicitor handled your matter? (Optional)</span>
+                </h3>
+                <div class="solicitor_one clearfix">
+                    <div class="rounded-circle">
+                        <img src="./assets/review/img/guy.png" alt="">
+                    </div>
+                    <div class="custom_select">
+                        <input type="checkbox" id="drop" class="d-none">
+                        <label for="drop">
+                            <span class="value">Bob Jones</span>
+                            <span class="arrow"></span>
+                            <label class="dropdown">
+                                <h4 onclick="event.target.parentElement.parentElement.firstElementChild.innerHTML=event.target.innerHTML">
+                                    1</h4>
+                                <h4 onclick="event.target.parentElement.parentElement.firstElementChild.innerHTML=event.target.innerHTML">
+                                    2</h4>
+                                <h4 onclick="event.target.parentElement.parentElement.firstElementChild.innerHTML=event.target.innerHTML">
+                                    3</h4>
+                                <h4 onclick="event.target.parentElement.parentElement.firstElementChild.innerHTML=event.target.innerHTML">
+                                    4</h4>
+                                <h4 onclick="event.target.parentElement.parentElement.firstElementChild.innerHTML=event.target.innerHTML">
+                                    5</h4>
+                                <h4 onclick="event.target.parentElement.parentElement.firstElementChild.innerHTML=event.target.innerHTML">
+                                    6</h4>
+                                <h4 onclick="event.target.parentElement.parentElement.firstElementChild.innerHTML=event.target.innerHTML">
+                                    7</h4>
+                            </label>
+                        </label>
+                    </div>
+                    <h4><a href="">Click here </a>is another solicitor assitsyou in the matter?</h4>
+                </div>
+                <h3>Were you satisfied with the outcome of your case?</h3>
+                <div class="radios">
+                    <label>
+                        <input type="radio" value="yes" id="satisfied1" name="satisfied"> Yes
+                    </label>
+                    <label>
+                        <input type="radio" value="no" id="satisfied2" name="satisfied"> No
+                    </label>
+                </div>
+                <h3>Would you recommend this firm to somebody else?</h3>
+                <div class="radios">
+                    <label>
+                        <input type="radio" value="yes" id="recommend1" name="recommend"> Yes
+                    </label><label>
+                    <input type="radio" value="no" id="recommend2" name="recommend"> No
+                </label>
+                </div>
+
                 <div class="optional">
                     <h3 class="green">Could you say a little more about it? <span>(optional)</span></h3>
                     <h3>Click to select a rating</h3>
@@ -355,6 +356,58 @@ of service and an unethical practice, committing fraud on reviews is also prohib
                         By submitting your review then you consent that you are happy to allow us to do this.
                     </div>
                 </div>
+                <div class="create">
+                    <h3 class="green">Create your account</h3>
+                    <h3>In order to leave your review, please select one of the following ways to create an account -
+                        <span>with a social media account:</span></h3>
+                    <a href="#" class="facebook">
+                        <div class="left">
+                            <i class="fab fa-facebook-f"></i>
+                        </div>
+                        <div class="right">
+                            <h4>Sign in with Facebook</h4>
+                        </div>
+                    </a>
+                    <a href="#" class="linked">
+                        <div class="left">
+                            <i class="fab fa-linkedin-in"></i>
+                        </div>
+                        <div class="right">
+                            <h4>Sign in with Facebook</h4>
+                        </div>
+                    </a>
+                    <a href="#" class="google">
+                        <div class="left">
+                            <i class="fab fa-google"></i>
+                        </div>
+                        <div class="right">
+                            <h4>Sign in with Facebook</h4>
+                        </div>
+                    </a>
+                </div>
+                <div class="email">
+                    <h3 class="green">Or with an email address</h3>
+                    <div class="row">
+                        <h4 class="col-sm-3">Email</h4>
+                        <div class="col-sm-9">
+                            <input type="text">
+                        </div>
+                        <h4 class="col-sm-3 mt-3">Password</h4>
+                        <div class="col-sm-9 mt-2">
+                            <input type="password">
+                        </div>
+                        <h4 class="col-sm-3 mt-2">Remember me</h4>
+                        <div class="col-sm-9 mt-3">
+                            <input type="checkbox">
+                        </div>
+                        <h4 class="offset-sm-3 mt-2"></h4>
+                        <div class="col-sm-9 mt-3">
+                            <button class="mr-3">Sign In</button>
+                            <a href="#" class="green">Forgot Password?</a>
+                        </div>
+                    </div>
+                </div>
+                <button><i class="fa fa-star"></i>Submit Review</button>
 
             </div>
             <div class="col-md-4 offset-md-1">
