--- a/review.html
+++ b/review.html
@@ -396,9 +396,10 @@ of service and an unethical practice, committing fraud on reviews is also prohib
                         <div class="col-sm-9 mt-2">
                             <input type="password">
                         </div>
-                        <h4 class="col-sm-3 mt-2">Remember me</h4>
-                        <div class="col-sm-9 mt-3">
-                            <input type="checkbox">
+                        <div class="col-12 mt-3 d-flex align-items-center">
+                        <h4 class="mr-3">Remember me</h4>
+
+                            <input class="w-auto" type="checkbox">
                         </div>
                         <h4 class="offset-sm-3 mt-2"></h4>
                         <div class="col-sm-9 mt-3">
@@ -416,8 +417,43 @@ of service and an unethical practice, committing fraud on reviews is also prohib
 
             </div>
         </div>
+
     </div>
 </section>
+<footer>
+    <nav class="footer-links">
+        <div class="container">
+            <a href="/">Home</a>
+            <a href="/ask-question">Ask A Legal Question</a>
+            <a href="/write-review">Write a Review</a>
+            <a href="/counties">Search by County</a>
+            <a href="/terms">Terms &amp; Conditions</a>
+            <a href="/about-reviews">Our Review Policy</a>
+            <a href="/contact-us">Contact Us</a>
+        </div>
+    </nav>
+    <div class="footer-copy">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-6">
+                    <span class="footer-logo"></span>
+                    ReviewSolicitors | Nicholson House | Nicholson Walk | Maidenhead | Berkshire | SL6 1LD | 0333 577 0206
+                </div>
+                <div class="col-sm-4 footer-rs-site-links">
+                    <a href="https://www.reviewsolicitors.ie/" target="_blank" class="footer-copy">ReviewSolicitors Ireland</a> | <a href="https://www.reviewsolicitors.com.au/" target="_blank" class="footer-copy">ReviewSolicitors Australia</a>
+                </div>
+                <div class="col-sm-2">
+                    <nav class="social-nav">
+                        <a href="https://www.facebook.com/reviewsolicitors/" target="_blank" class="facebook"><i class="fab fa-facebook-f"></i></a>
+                        <a href="https://twitter.com/ReviewSolicitor" target="_blank" class="twitter"><i class="fab fa-twitter"></i></a>
+                        <a href="https://www.linkedin.com/company/reviewsolicitors" target="_blank" class="linkedin"><i class="fab fa-linkedin-in"></i></a>
+                    </nav>
+                </div>
+            </div>
+        </div>
+    </div>
+
+</footer>
 
 
 <script type="text/javascript" src="./js/jquery.js"></script>
