--- a/review.html
+++ b/review.html
@@ -396,10 +396,11 @@ of service and an unethical practice, committing fraud on reviews is also prohib
                         <div class="col-sm-9 mt-2">
                             <input type="password">
                         </div>
-                        <div class="col-12 mt-3 d-flex align-items-center">
-                        <h4 class="mr-3">Remember me</h4>
-
-                            <input class="w-auto" type="checkbox">
+                        <div class="col-12 mt-3 d-flex align-items-center row m-0 p-0">
+                            <h4 class="col-sm-3 col-5 ">Remember me</h4>
+                            <div class="col-auto">
+                                <input class="w-auto  " type="checkbox">
+                            </div>
                         </div>
                         <h4 class="offset-sm-3 mt-2"></h4>
                         <div class="col-sm-9 mt-3">
@@ -414,7 +415,138 @@ of service and an unethical practice, committing fraud on reviews is also prohib
             <div class="col-md-4 offset-md-1">
 
                 <h3 class="green">Recent reviews of Coles Solicitors Limited</h3>
+                <div class="review d-flex">
+                    <div class="mr-3">
+                        <svg
+                                xmlns:xlink="http://www.w3.org/1999/xlink"
+                                xmlns="http://www.w3.org/2000/svg"
+                                width="22px" height="20px">
+                            <defs>
+                                <filter id="Filter_0">
+                                    <feFlood flood-color="rgb(0, 165, 74)" flood-opacity="1" result="floodOut"/>
+                                    <feComposite operator="atop" in="floodOut" in2="SourceGraphic" result="compOut"/>
+                                    <feBlend mode="normal" in="compOut" in2="SourceGraphic"/>
+                                </filter>
 
+                            </defs>
+                            <g filter="url(#Filter_0)">
+                                <path fill-rule="evenodd" opacity="0.2" fill="rgb(0, 165, 74)"
+                                      d="M21.947,8.503 C21.775,11.300 20.509,15.488 15.431,19.566 C15.188,19.758 14.903,19.853 14.618,19.853 C14.224,19.853 13.832,19.673 13.569,19.321 C13.120,18.724 13.224,17.862 13.804,17.399 C17.940,14.081 19.069,10.828 19.266,8.598 C18.683,8.936 18.022,9.144 17.307,9.144 C15.075,9.144 13.273,7.276 13.273,4.972 C13.273,2.668 15.075,0.801 17.302,0.801 C17.806,0.801 18.272,0.929 18.713,1.109 L18.699,1.076 L19.164,1.297 L19.208,1.313 L19.230,1.330 L19.866,1.779 L20.145,2.063 C21.148,3.045 22.238,4.926 21.947,8.503 ZM2.156,19.566 C1.912,19.758 1.627,19.853 1.343,19.853 C0.948,19.853 0.556,19.673 0.293,19.321 C-0.156,18.724 -0.049,17.862 0.529,17.399 C4.665,14.081 5.793,10.828 5.993,8.598 C5.410,8.936 4.750,9.144 4.035,9.144 C1.808,9.144 0.000,7.276 0.000,4.972 C0.000,2.668 1.805,0.801 4.035,0.801 C4.539,0.801 5.002,0.929 5.443,1.109 L5.429,1.076 L5.895,1.297 L5.936,1.313 L5.958,1.330 L6.596,1.779 L6.872,2.063 C7.869,3.045 8.959,4.926 8.669,8.503 C8.499,11.300 7.231,15.488 2.156,19.566 Z"/>
+                            </g>
+                        </svg>
+                    </div>
+                    <div>
+                        <h3>Title review</h3>
+                        <p>Cole’s were excellent when handling the purchase of our property. Many thanks to Kelly and
+                            all her team.</p>
+                        <div class="stars  d-flex">
+                            <i class="fa fa-star yellow"></i>
+                            <i class="fa fa-star yellow"></i>
+                            <i class="fa fa-star yellow"></i>
+                            <i class="fa fa-star yellow"></i>
+                            <i class="fa fa-star yellow"></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="review d-flex">
+                    <div class="mr-3">
+                        <svg
+                                xmlns:xlink="http://www.w3.org/1999/xlink"
+                                xmlns="http://www.w3.org/2000/svg"
+                                width="22px" height="20px">
+                            <defs>
+                                <filter id="Filter_0">
+                                    <feFlood flood-color="rgb(0, 165, 74)" flood-opacity="1" result="floodOut"/>
+                                    <feComposite operator="atop" in="floodOut" in2="SourceGraphic" result="compOut"/>
+                                    <feBlend mode="normal" in="compOut" in2="SourceGraphic"/>
+                                </filter>
+
+                            </defs>
+                            <g filter="url(#Filter_0)">
+                                <path fill-rule="evenodd" opacity="0.2" fill="rgb(0, 165, 74)"
+                                      d="M21.947,8.503 C21.775,11.300 20.509,15.488 15.431,19.566 C15.188,19.758 14.903,19.853 14.618,19.853 C14.224,19.853 13.832,19.673 13.569,19.321 C13.120,18.724 13.224,17.862 13.804,17.399 C17.940,14.081 19.069,10.828 19.266,8.598 C18.683,8.936 18.022,9.144 17.307,9.144 C15.075,9.144 13.273,7.276 13.273,4.972 C13.273,2.668 15.075,0.801 17.302,0.801 C17.806,0.801 18.272,0.929 18.713,1.109 L18.699,1.076 L19.164,1.297 L19.208,1.313 L19.230,1.330 L19.866,1.779 L20.145,2.063 C21.148,3.045 22.238,4.926 21.947,8.503 ZM2.156,19.566 C1.912,19.758 1.627,19.853 1.343,19.853 C0.948,19.853 0.556,19.673 0.293,19.321 C-0.156,18.724 -0.049,17.862 0.529,17.399 C4.665,14.081 5.793,10.828 5.993,8.598 C5.410,8.936 4.750,9.144 4.035,9.144 C1.808,9.144 0.000,7.276 0.000,4.972 C0.000,2.668 1.805,0.801 4.035,0.801 C4.539,0.801 5.002,0.929 5.443,1.109 L5.429,1.076 L5.895,1.297 L5.936,1.313 L5.958,1.330 L6.596,1.779 L6.872,2.063 C7.869,3.045 8.959,4.926 8.669,8.503 C8.499,11.300 7.231,15.488 2.156,19.566 Z"/>
+                            </g>
+                        </svg>
+                    </div>
+                    <div>
+                        <h3>Title review</h3>
+                        <p>Cole’s were excellent when handling the purchase of our property. Many thanks to Kelly and
+                            all her team.</p>
+                        <div class="stars  d-flex">
+                            <i class="fa fa-star yellow"></i>
+                            <i class="fa fa-star yellow"></i>
+                            <i class="fa fa-star yellow"></i>
+                            <i class="fa fa-star yellow"></i>
+                            <i class="fa fa-star yellow"></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="review d-flex">
+                    <div class="mr-3">
+                        <svg
+                                xmlns:xlink="http://www.w3.org/1999/xlink"
+                                xmlns="http://www.w3.org/2000/svg"
+                                width="22px" height="20px">
+                            <defs>
+                                <filter id="Filter_0">
+                                    <feFlood flood-color="rgb(0, 165, 74)" flood-opacity="1" result="floodOut"/>
+                                    <feComposite operator="atop" in="floodOut" in2="SourceGraphic" result="compOut"/>
+                                    <feBlend mode="normal" in="compOut" in2="SourceGraphic"/>
+                                </filter>
+
+                            </defs>
+                            <g filter="url(#Filter_0)">
+                                <path fill-rule="evenodd" opacity="0.2" fill="rgb(0, 165, 74)"
+                                      d="M21.947,8.503 C21.775,11.300 20.509,15.488 15.431,19.566 C15.188,19.758 14.903,19.853 14.618,19.853 C14.224,19.853 13.832,19.673 13.569,19.321 C13.120,18.724 13.224,17.862 13.804,17.399 C17.940,14.081 19.069,10.828 19.266,8.598 C18.683,8.936 18.022,9.144 17.307,9.144 C15.075,9.144 13.273,7.276 13.273,4.972 C13.273,2.668 15.075,0.801 17.302,0.801 C17.806,0.801 18.272,0.929 18.713,1.109 L18.699,1.076 L19.164,1.297 L19.208,1.313 L19.230,1.330 L19.866,1.779 L20.145,2.063 C21.148,3.045 22.238,4.926 21.947,8.503 ZM2.156,19.566 C1.912,19.758 1.627,19.853 1.343,19.853 C0.948,19.853 0.556,19.673 0.293,19.321 C-0.156,18.724 -0.049,17.862 0.529,17.399 C4.665,14.081 5.793,10.828 5.993,8.598 C5.410,8.936 4.750,9.144 4.035,9.144 C1.808,9.144 0.000,7.276 0.000,4.972 C0.000,2.668 1.805,0.801 4.035,0.801 C4.539,0.801 5.002,0.929 5.443,1.109 L5.429,1.076 L5.895,1.297 L5.936,1.313 L5.958,1.330 L6.596,1.779 L6.872,2.063 C7.869,3.045 8.959,4.926 8.669,8.503 C8.499,11.300 7.231,15.488 2.156,19.566 Z"/>
+                            </g>
+                        </svg>
+                    </div>
+                    <div>
+                        <h3>Title review</h3>
+                        <p>Cole’s were excellent when handling the purchase of our property. Many thanks to Kelly and
+                            all her team.</p>
+                        <div class="stars  d-flex">
+                            <i class="fa fa-star yellow"></i>
+                            <i class="fa fa-star yellow"></i>
+                            <i class="fa fa-star yellow"></i>
+                            <i class="fa fa-star yellow"></i>
+                            <i class="fa fa-star yellow"></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="review d-flex">
+                    <div class="mr-3">
+                        <svg
+                                xmlns:xlink="http://www.w3.org/1999/xlink"
+                                xmlns="http://www.w3.org/2000/svg"
+                                width="22px" height="20px">
+                            <defs>
+                                <filter id="Filter_0">
+                                    <feFlood flood-color="rgb(0, 165, 74)" flood-opacity="1" result="floodOut"/>
+                                    <feComposite operator="atop" in="floodOut" in2="SourceGraphic" result="compOut"/>
+                                    <feBlend mode="normal" in="compOut" in2="SourceGraphic"/>
+                                </filter>
+
+                            </defs>
+                            <g filter="url(#Filter_0)">
+                                <path fill-rule="evenodd" opacity="0.2" fill="rgb(0, 165, 74)"
+                                      d="M21.947,8.503 C21.775,11.300 20.509,15.488 15.431,19.566 C15.188,19.758 14.903,19.853 14.618,19.853 C14.224,19.853 13.832,19.673 13.569,19.321 C13.120,18.724 13.224,17.862 13.804,17.399 C17.940,14.081 19.069,10.828 19.266,8.598 C18.683,8.936 18.022,9.144 17.307,9.144 C15.075,9.144 13.273,7.276 13.273,4.972 C13.273,2.668 15.075,0.801 17.302,0.801 C17.806,0.801 18.272,0.929 18.713,1.109 L18.699,1.076 L19.164,1.297 L19.208,1.313 L19.230,1.330 L19.866,1.779 L20.145,2.063 C21.148,3.045 22.238,4.926 21.947,8.503 ZM2.156,19.566 C1.912,19.758 1.627,19.853 1.343,19.853 C0.948,19.853 0.556,19.673 0.293,19.321 C-0.156,18.724 -0.049,17.862 0.529,17.399 C4.665,14.081 5.793,10.828 5.993,8.598 C5.410,8.936 4.750,9.144 4.035,9.144 C1.808,9.144 0.000,7.276 0.000,4.972 C0.000,2.668 1.805,0.801 4.035,0.801 C4.539,0.801 5.002,0.929 5.443,1.109 L5.429,1.076 L5.895,1.297 L5.936,1.313 L5.958,1.330 L6.596,1.779 L6.872,2.063 C7.869,3.045 8.959,4.926 8.669,8.503 C8.499,11.300 7.231,15.488 2.156,19.566 Z"/>
+                            </g>
+                        </svg>
+                    </div>
+                    <div>
+                        <h3>Title review</h3>
+                        <p>Cole’s were excellent when handling the purchase of our property. Many thanks to Kelly and
+                            all her team.</p>
+                        <div class="stars  d-flex">
+                            <i class="fa fa-star yellow"></i>
+                            <i class="fa fa-star yellow"></i>
+                            <i class="fa fa-star yellow"></i>
+                            <i class="fa fa-star yellow"></i>
+                            <i class="fa fa-star yellow"></i>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
 
@@ -437,16 +569,22 @@ of service and an unethical practice, committing fraud on reviews is also prohib
             <div class="row">
                 <div class="col-sm-6">
                     <span class="footer-logo"></span>
-                    ReviewSolicitors | Nicholson House | Nicholson Walk | Maidenhead | Berkshire | SL6 1LD | 0333 577 0206
+                    ReviewSolicitors | Nicholson House | Nicholson Walk | Maidenhead | Berkshire | SL6 1LD | 0333 577
+                    0206
                 </div>
                 <div class="col-sm-4 footer-rs-site-links">
-                    <a href="https://www.reviewsolicitors.ie/" target="_blank" class="footer-copy">ReviewSolicitors Ireland</a> | <a href="https://www.reviewsolicitors.com.au/" target="_blank" class="footer-copy">ReviewSolicitors Australia</a>
+                    <a href="https://www.reviewsolicitors.ie/" target="_blank" class="footer-copy">ReviewSolicitors
+                        Ireland</a> | <a href="https://www.reviewsolicitors.com.au/" target="_blank"
+                                         class="footer-copy">ReviewSolicitors Australia</a>
                 </div>
                 <div class="col-sm-2">
                     <nav class="social-nav">
-                        <a href="https://www.facebook.com/reviewsolicitors/" target="_blank" class="facebook"><i class="fab fa-facebook-f"></i></a>
-                        <a href="https://twitter.com/ReviewSolicitor" target="_blank" class="twitter"><i class="fab fa-twitter"></i></a>
-                        <a href="https://www.linkedin.com/company/reviewsolicitors" target="_blank" class="linkedin"><i class="fab fa-linkedin-in"></i></a>
+                        <a href="https://www.facebook.com/reviewsolicitors/" target="_blank" class="facebook"><i
+                                class="fab fa-facebook-f"></i></a>
+                        <a href="https://twitter.com/ReviewSolicitor" target="_blank" class="twitter"><i
+                                class="fab fa-twitter"></i></a>
+                        <a href="https://www.linkedin.com/company/reviewsolicitors" target="_blank" class="linkedin"><i
+                                class="fab fa-linkedin-in"></i></a>
                     </nav>
                 </div>
             </div>
